--- a/of.ipynb
+++ b/of.ipynb
@@ -247,7 +247,7 @@
     "        columns=[\"hash_id\", \"lac_coef\", \"cid_coef\", \"wsum\"]\n",
     "    )\n",
     "\n",
-    "    # better to rewrite via groupby\n",
+    "    # better to rewrite via aggregation\n",
     "    hash_ids = df.hash_id.unique()\n",
     "    i = 0\n",
     "    for hash_id in hash_ids:\n",
@@ -793,6 +793,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "excluding ids from *etalon.csv*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -945,9 +952,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 9h 31min 56s, sys: 33.6 s, total: 9h 32min 30s\n",
+      "Wall time: 9h 32min 32s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time \n",
     "#confidence>0.2 is good (it is not from [0, 1])\n",
@@ -957,11 +973,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results.to_csv('results.csv')"
+    "results = results.rename(columns={'id2_prediction':'id2'})\n",
+    "results.drop('confidence', axis=1).to_csv('results.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id1</th>\n",
+       "      <th>id2</th>\n",
+       "      <th>confidence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1750</th>\n",
+       "      <td>1506464</td>\n",
+       "      <td>2664544</td>\n",
+       "      <td>0.191905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>455</th>\n",
+       "      <td>1829209</td>\n",
+       "      <td>2646256</td>\n",
+       "      <td>0.577570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>531</th>\n",
+       "      <td>1856894</td>\n",
+       "      <td>2044151</td>\n",
+       "      <td>0.117284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>1885368</td>\n",
+       "      <td>2079187</td>\n",
+       "      <td>0.081529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1695</th>\n",
+       "      <td>1065994</td>\n",
+       "      <td>2217321</td>\n",
+       "      <td>0.394782</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1044</th>\n",
+       "      <td>1573047</td>\n",
+       "      <td>2811134</td>\n",
+       "      <td>0.224544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1071</th>\n",
+       "      <td>1477541</td>\n",
+       "      <td>2891591</td>\n",
+       "      <td>0.169843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1090</th>\n",
+       "      <td>1657662</td>\n",
+       "      <td>2159955</td>\n",
+       "      <td>0.112659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1551</th>\n",
+       "      <td>1321902</td>\n",
+       "      <td>2962098</td>\n",
+       "      <td>0.359938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>348</th>\n",
+       "      <td>1444501</td>\n",
+       "      <td>2480524</td>\n",
+       "      <td>0.219108</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id1      id2  confidence\n",
+       "1750  1506464  2664544    0.191905\n",
+       "455   1829209  2646256    0.577570\n",
+       "531   1856894  2044151    0.117284\n",
+       "398   1885368  2079187    0.081529\n",
+       "1695  1065994  2217321    0.394782\n",
+       "1044  1573047  2811134    0.224544\n",
+       "1071  1477541  2891591    0.169843\n",
+       "1090  1657662  2159955    0.112659\n",
+       "1551  1321902  2962098    0.359938\n",
+       "348   1444501  2480524    0.219108"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Algorithm description**:\n",
+    "1. For every *hash_id* from the first part calculate intersections (both by *cids* and *lacs*), sort by similarity=lac_similarity_coef+w*cid_similarity_coef (w=3.0, hyperparameter). \n",
+    "2. *Id2* prediction is a *hash_id* with the highest value of similarity, confidence_of_prediction=top1_similarity-top2_similarity.\n",
+    "3. Repeat parts 1 and 2 (once or more) for the values with confidence of prediction less than threshold value (0.2) excluding the others.\n",
+    "\n",
+    "---\n",
+    "**Results**:\n",
+    "1. Accuracy after step 1: **0.876**\n",
+    "2. Accuracy for confident predictions (confidence>0.2): **0.9885**\n",
+    "3. Accuracy after step 3: **0.9** (12 predictions are corrected, 0 spoiled).\n",
+    "\n",
+    "\n",
+    "Note: accuracy for the rest of data should be the same as for the *etalon.csv* because **unsupervised** learning is used (nothing to overfit)."
    ]
   }
  ],
