--- a/of.ipynb
+++ b/of.ipynb
@@ -31,8 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data.csv', sep=';')\n",
-    "etl = pd.read_csv('etalon.csv', sep=';')"
+    "df = pd.read_csv(\"data.csv\", sep=\";\")\n",
+    "etl = pd.read_csv(\"etalon.csv\", sep=\";\")"
    ]
   },
   {
@@ -41,8 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = df[df.fulldate<'2018-09-15']\n",
-    "df2 = df[df.fulldate>'2018-09-15']"
+    "df1 = df[df.fulldate < \"2018-09-15\"]\n",
+    "df2 = df[df.fulldate > \"2018-09-15\"]"
    ]
   },
   {
@@ -241,11 +241,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#statistics of intersections for 'hash1'\n",
+    "# statistics of intersections for 'hash1'\n",
     "def naive_intersections(lacs_a, cids_a, df, alpha=3.0):\n",
-    "    intersections_df = pd.DataFrame(\n",
-    "        columns=[\"hash_id\", \"lac_coef\", \"cid_coef\", \"wsum\"]\n",
-    "    )\n",
+    "    intersections_df = pd.DataFrame(columns=[\"hash_id\", \"lac_coef\", \"cid_coef\", \"wsum\"])\n",
     "\n",
     "    # better to rewrite via aggregation\n",
     "    hash_ids = df.hash_id.unique()\n",
@@ -265,7 +263,7 @@
     "            hash_id,\n",
     "            lac_coef,\n",
     "            sid_coef,\n",
-    "            lac_coef + alpha * sid_coef\n",
+    "            lac_coef + alpha * sid_coef,\n",
     "        ]\n",
     "        i += 1\n",
     "\n",
@@ -288,11 +286,15 @@
    ],
    "source": [
     "%%time\n",
-    "#check for the first hash_id from etalon.csv\n",
-    "hash_id = 1361396 #id2 should be 2695335\n",
-    "lacs_a = set(df[df.hash_id==hash_id].lac.unique())\n",
-    "cids_a = set(df[df.hash_id==hash_id].cid.unique())\n",
-    "res = naive_intersections(lacs_a, cids_a, df2).sort_values('wsum', ascending=False).reset_index(drop=True)"
+    "# check for the first hash_id from etalon.csv\n",
+    "hash_id = 1361396  # id2 should be 2695335\n",
+    "lacs_a = set(df[df.hash_id == hash_id].lac.unique())\n",
+    "cids_a = set(df[df.hash_id == hash_id].cid.unique())\n",
+    "res = (\n",
+    "    naive_intersections(lacs_a, cids_a, df2)\n",
+    "    .sort_values(\"wsum\", ascending=False)\n",
+    "    .reset_index(drop=True)\n",
+    ")"
    ]
   },
   {
@@ -707,7 +709,7 @@
    ],
    "source": [
     "%%time\n",
-    "#correction for low-confidence hash_ids\n",
+    "# correction for low-confidence hash_ids\n",
     "hash_ids_a = preds_df_2.id1.values\n",
     "hash_ids_b = preds_df_2.id2.values\n",
     "preds_df_2[\"id2_prediction_2\"], preds_df_2[\"confidence_2\"] = predict_ids(\n",
@@ -732,8 +734,8 @@
     }
    ],
    "source": [
-    "acc = (preds_df_2.id2==preds_df_2.id2_prediction_2).sum()\n",
-    "print(acc/preds_df_2.shape[0]) #accuracy after correction"
+    "acc = (preds_df_2.id2 == preds_df_2.id2_prediction_2).sum()\n",
+    "print(acc / preds_df_2.shape[0])  # accuracy after correction"
    ]
   },
   {
@@ -742,7 +744,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds_df_2['correct_2'] = (preds_df_2.id2==preds_df_2.id2_prediction_2)"
+    "preds_df_2[\"correct_2\"] = preds_df_2.id2 == preds_df_2.id2_prediction_2"
    ]
   },
   {
@@ -778,11 +780,11 @@
     }
    ],
    "source": [
-    "tp = preds_df_2[(preds_df_2.correct==False) & (preds_df_2.correct_2==True)].shape[0]\n",
-    "tn = preds_df_2[(preds_df_2.correct==True) & (preds_df_2.correct_2==False)].shape[0]\n",
+    "tp = preds_df_2[(preds_df_2.correct == False) & (preds_df_2.correct_2 == True)].shape[0]\n",
+    "tn = preds_df_2[(preds_df_2.correct == True) & (preds_df_2.correct_2 == False)].shape[0]\n",
     "\n",
-    "acc = (preds_df.id2==preds_df.id2_prediction).sum() + tp - tn\n",
-    "print(acc/preds_df.shape[0]) #final accuracy (for 491 values with known answers)"
+    "acc = (preds_df.id2 == preds_df.id2_prediction).sum() + tp - tn\n",
+    "print(acc / preds_df.shape[0])  # final accuracy (for 491 values with known answers)"
    ]
   },
   {
@@ -834,7 +836,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = pd.DataFrame(df1_tst.hash_id.unique(), columns=['id1'])"
+    "results = pd.DataFrame(df1_tst.hash_id.unique(), columns=[\"id1\"])"
    ]
   },
   {
@@ -852,12 +854,16 @@
     }
    ],
    "source": [
-    "%%time \n",
+    "%%time\n",
     "# ~20s for 1 hash_id => ~10h for 1757 ids\n",
     "hash_id = 1693644\n",
-    "lacs_a = set(df[df.hash_id==hash_id].lac.unique())\n",
-    "cids_a = set(df[df.hash_id==hash_id].cid.unique())\n",
-    "res = naive_intersections(lacs_a, cids_a, df2_tst).sort_values('wsum', ascending=False).reset_index(drop=True)"
+    "lacs_a = set(df[df.hash_id == hash_id].lac.unique())\n",
+    "cids_a = set(df[df.hash_id == hash_id].cid.unique())\n",
+    "res = (\n",
+    "    naive_intersections(lacs_a, cids_a, df2_tst)\n",
+    "    .sort_values(\"wsum\", ascending=False)\n",
+    "    .reset_index(drop=True)\n",
+    ")"
    ]
   },
   {
@@ -965,10 +971,12 @@
     }
    ],
    "source": [
-    "%%time \n",
-    "#confidence>0.2 is good (it is not from [0, 1])\n",
-    "results['id2_prediction'], results['confidence'] = predict_ids(results.id1.values, df1_tst, df2_tst)\n",
-    "results.id2_prediction = results.id2_prediction.astype('int')"
+    "%%time\n",
+    "# confidence>0.2 is good (it is not from [0, 1])\n",
+    "results[\"id2_prediction\"], results[\"confidence\"] = predict_ids(\n",
+    "    results.id1.values, df1_tst, df2_tst\n",
+    ")\n",
+    "results.id2_prediction = results.id2_prediction.astype(\"int\")"
    ]
   },
   {
@@ -1117,10 +1125,11 @@
     "3. Repeat parts 1 and 2 (once or more) for the values with confidence of prediction less than threshold value (0.2) excluding the others.\n",
     "\n",
     "---\n",
-    "**Results**:\n",
+    "**Results** (for *etalon.csv*):\n",
     "1. Accuracy after step 1: **0.876**\n",
-    "2. Accuracy for confident predictions (confidence>0.2): **0.9885**\n",
-    "3. Accuracy after step 3: **0.9** (12 predictions are corrected, 0 spoiled).\n",
+    "2. Accuracy after step 3: **0.9** (12 predictions are corrected, 0 spoiled, 100% of data).\n",
+    "3. Accuracy for predictions with *confidence*>0.1: **0.97** (75% of data)\n",
+    "4. Accuracy for predictions with *confidence*>0.2: **0.9885** (53% of data)\n",
     "\n",
     "\n",
     "Note: accuracy for the rest of data should be the same as for the *etalon.csv* because **unsupervised** learning is used (nothing to overfit)."
