--- a/of.ipynb
+++ b/of.ipynb
@@ -1120,7 +1120,7 @@
    "metadata": {},
    "source": [
     "**Algorithm description**:\n",
-    "1. For every *hash_id* from the first part calculate intersections (both by *cids* and *lacs*), sort by similarity=lac_similarity_coef+w*cid_similarity_coef (w=3.0, hyperparameter). \n",
+    "1. For every *hash_id* from the first part calculate intersections with hash_ids from the second part both by *cids* and *lacs*, sort by similarity==lac_similarity_coef+w*cid_similarity_coef (w=3.0, hyperparameter). \n",
     "2. *Id2* prediction is a *hash_id* with the highest value of similarity, confidence_of_prediction=top1_similarity-top2_similarity.\n",
     "3. Repeat parts 1 and 2 (once or more) for the values with confidence of prediction less than threshold value (0.2) excluding the others.\n",
     "\n",
@@ -1132,7 +1132,7 @@
     "4. Accuracy for predictions with *confidence*>0.2: **0.9885** (53% of data)\n",
     "\n",
     "\n",
-    "Note: accuracy for the rest of data should be the same as for the *etalon.csv* because **unsupervised** learning is used (nothing to overfit)."
+    "Note: accuracy for the rest of data should be the same as for the *etalon.csv* because **unsupervised** learning is used (nothing to overfit), params *w* and *threshold* were not tuned especially for *etalon.csv*."
    ]
   }
  ],
